# RISCBoy

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Readme.md  TODO.todo  all.todo  cpusynth  sourceme
board/: .gitignore  _autosave-fpgaboy.kicad_pcb  _saved_fpgaboy.sch  bga_gen.py  fpgaboy-cache.lib  fpgaboy.bak  fpgaboy.kicad_pcb  fpgaboy.kicad_pcb-bak  fpgaboy.kicad_pcb-bak.REMOVED.git-id  fpgaboy.kicad_pcb.REMOVED.git-id  fpgaboy.net  fpgaboy.pro  fpgaboy.sch  fpgaboy_parts.bak  fpgaboy_parts.lib
board/24pin_flex_interposer/mcu_lcd_test/: CMakeLists.txt  full_sequence.txt  main.c  seq_dump.py
doc/: .gitignore  Makefile  Readme.md  audio_processing_unit.md  branching_thoughts  ch1_intro.tex  ch2_cpu_architecture.tex  ch3_pixel_processing_unit.tex  ch4_audio_processing_unit.tex  ch4_bus_fabric_memory.tex  ch5_bus_fabric_memory.tex  fpgaboy_doc.aux  fpgaboy_doc.pdf.REMOVED.git-id  fpgaboy_doc.tex  fpgaboy_doc.toc  jumplite_spec.tex  riscboy_doc.tex
hdl/: ili9314_controller.v
reference/: ARM_IHI0033A_AMBA_AHB-Lite_SPEC.pdf.REMOVED.git-id  opcode_parse  riscv-privileged-v1.10.pdf.REMOVED.git-id  riscv-spec-v2.2.pdf.REMOVED.git-id  rv_opcodes.vh
scripts/: ckcompress  extract_ref_nets  formal.mk  gui_run.tcl  listfiles  logic_view  makeprj  memmap.ld  mkflashexec  packtiles  piceprog  regblock  runtests  sim.mk  sim_run.tcl  software.mk  synth.mk  synth_ecp5.mk  synth_ice40.mk  uartprog  uniquetiles  vhexwidth
software/: .gitignore  memmap_2nd.ld  memmap_boot.ld
synth/: .gitignore  ECP5-EVN.mk  HX8k-EVN.mk  Icebreaker-DVI.mk  Icebreaker.mk  Makefile  (+17 more)
(+722 files in other folders)
